# CrucibleGame

./: Cargo.toml
assets/sprites/definitions/: betty.spriteframes.ron
src/: enemy.rs  main.rs  player.rs  util.rs
src/assets/sprites/definitions/: betty.ron
