[package]
name = "crucible_game"
version = "0.1.0"
authors = ["BlueMoonJune", "GwabbaWaba"]

edition = "2021"
[dependencies]
bevy = "0.12.0"

[workspace]
resolver = "2"

# Project compile-time optimization
[profile.dev]
opt-level = 0

# Dependency compile-time optimization
[profile.dev.package."*"]
opt-level = 0
