[package]
name = "crucible_game"
version = "0.1.0"
authors = ["BlueMoonJune", "GwabbaWaba"]

edition = "2021"
[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[workspace]
resolver = "2"

# Project compile-time optimization
[profile.dev]
opt-level = 0

# Dependency compile-time optimization
[profile.dev.package."*"]
opt-level = 3
